--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.baomidou</groupId>
+	<groupId>io.z77z</groupId>
 	<artifactId>mybatisplus-spring-boot</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
@@ -13,7 +13,6 @@
 	</parent>
 
 	<dependencies>
-
 		<!-- redis数据库 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -115,7 +114,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>3.5</version>
 		</dependency>
 		
 		<!-- 提供监控插件。  有spring-boot actuator的jar包 -->
@@ -123,6 +122,19 @@
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>1.4.6</version>
+		</dependency>
+		
+		<!-- TCP长连接即时通讯框架 -->
+		<dependency>
+		    <groupId>org.t-io</groupId>
+		    <artifactId>tio-core</artifactId>
+		    <version>1.7.0.v20170501-RELEASE</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.13</version>
 		</dependency>
 	</dependencies>
 	<build>
